--- a/src/public/themes/2020-jan-admin/entity-pkg/entity-type/list.html
+++ b/src/public/themes/2020-jan-admin/entity-pkg/entity-type/list.html
@@ -1,5 +1,5 @@
 <div class="content-wrap bl-fixed">
-    <table class="table table-striped table-fixed-header" id="entities_list">
+    <table class="table table-striped table-fixed-header" id="entity_types_list">
         <thead class="header">
             <tr>
                 <th class="action">Actions</th>
