--- a/src/public/themes/2020-jan-admin/entity-pkg/entity/form.html
+++ b/src/public/themes/2020-jan-admin/entity-pkg/entity/form.html
@@ -7,16 +7,16 @@
                     <div class="page-header-content">
                         <div class="page-header-inner page-title display-inline-block">
                             <div class="previous-page">
-                                <a href="#!/entity-pkg/entity/list">
+                                <a href="#!/entity-pkg/entity/list/{{$ctrl.entity_type.id}}">
                                     <img src="./public/themes/{{$ctrl.theme}}/img/content/previous.svg" class="img-responsive">
                                 </a>
                             </div>
                         </div><!-- Page Header Inner -->
                         <div class="page-header-inner page-title display-inline-block">
-                            <h1 class="title">{{$ctrl.action}} Entity</h1>
+                            <h1 class="title">{{$ctrl.action}} {{$ctrl.entity_type.name}}</h1>
                             <p class="subtitle">
-                                <a href="#!/entity-pkg/entity/list">
-                                    Entities List
+                                <a href="#!/entity-pkg/entity/list/{{$ctrl.entity_type.id}}">
+                                    {{$ctrl.entity_type.name}}
                                 </a> /
                                 {{$ctrl.action}}
                             </p>
@@ -30,7 +30,7 @@
     <div class="page-main-content">
         <form id="form" autocomplete="off" enctype="multipart/form-data">
             <input type="hidden" name="id" value="{{$ctrl.entity.id}}">
-            <input type="hidden" name="entity_type_id" value="{{$ctrl.entity.entity_type_id}}">
+            <input type="hidden" name="entity_type_id" value="{{$ctrl.entity_type.id}}">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
