--- a/src/public/themes/2020-jan-admin/entity-pkg/entity-type/list.html
+++ b/src/public/themes/2020-jan-admin/entity-pkg/entity-type/list.html
@@ -21,9 +21,9 @@
                         </div>
                     </div>
                     <div class="alert-button">
-                        <input type="hidden" name="entity_id" id="entity_id" value="">
+                        <input type="hidden" name="entity_id" id="entity_id" ng-model="$ctrl.entitytype_id" value="">
                         <button type="button" class="btn btn-red" data-dismiss="modal">Reject</button>
-                        <button type="button" id="accept" ng-click="deleteConfirm()" data-dismiss="modal" class="btn btn-red">Accept</button>
+                        <button type="button" id="accept" ng-click="deleteConfirm($ctrl.entitytype_id)" data-dismiss="modal" class="btn btn-red">Accept</button>
                     </div>
                 </div><!-- Modal Alert -->
             </div><!-- Modal Body -->
