--- a/src/public/themes/theme2/entity-pkg/entity/list.html
+++ b/src/public/themes/theme2/entity-pkg/entity/list.html
@@ -93,7 +93,7 @@
             </div><!-- Modal Body -->
             <div class="modal-footer">
                 <div class="text-right">
-                    <button type="button" class="btn btn-primary my-tooltip" ng-click="reset_filter()" ng-shortcut="'meta+shift+t'" ng-shortcut-click data-title="ctrl+shift+t">Reset</button>
+                    <button type="button" class="btn btn-primary my-tooltip" ng-click="reset_filter();$ctrl.entity.status=''" ng-shortcut="'meta+shift+t'" ng-shortcut-click data-title="ctrl+shift+t">Reset</button>
                 </div>
             </div><!-- Modal Footer -->
         </div><!-- Modal Content -->
