--- a/src/public/themes/theme2/entity-pkg/entity/list.html
+++ b/src/public/themes/theme2/entity-pkg/entity/list.html
@@ -3,8 +3,8 @@
         <div class="page-header-inner">
             <div class="page-header-content-left">
                 <div class="page-header-content title-block">
-                    <h1 class="title type-2 search_entity">JV Rejection Reasons (<span id="table_info">4</span>)</h1>
-                    <p class="subtitle">Masters / JV Masters / JV Rejection Reason Master</p>
+                    <h1 class="title type-2 search_entity">JV Rejection Reasons (<span id="table_info"></span>)</h1>
+                    <!-- <p class="subtitle">Masters / JV Masters / JV Rejection Reason Master</p> -->
                 </div><!-- Page Header Content -->
                 <div class="page-header-content button-block">
                     <button class="btn btn-bordered my-tooltip" data-toggle="modal" ng-shortcut="'meta+shift+f'" ng-shortcut-click data-title="ctrl+shift+f" data-target="#entity-filter"><i class="icon ion-md-funnel"></i>Filter</button>
