--- a/src/public/themes/theme2/entity-pkg/entity/list.html
+++ b/src/public/themes/theme2/entity-pkg/entity/list.html
@@ -32,7 +32,7 @@
                         </label>
                     </div><!-- Search Filter -->
                 </div><!-- Page Header Content -->
-                <div class="page-header-content button-block">
+                <div class="page-header-content button-block" ng-if="$ctrl.add_permission">
                     <a href="#!/entity-pkg/entity/add/{{$ctrl.entity_type_id}}" class="btn btn-primary my-tooltip" ng-shortcut="'meta+shift+n'" ng-shortcut-click data-title="ctrl+shift+n">Add New</a>
                 </div><!-- Page Header Content -->
             </div><!-- Page Header Content Right -->
