--- a/src/public/themes/theme2/entity-pkg/entity/form.html
+++ b/src/public/themes/theme2/entity-pkg/entity/form.html
@@ -38,7 +38,7 @@
                                         <div class="col-md-3">
                                             <div class="input-text form-group">
                                                 <label>Name <sup class="mandatory">*</sup></label>
-                                                <input class="form-control" placeholder="Enter Entity Name" autocomplete="off" ng-model="$ctrl.entity.name" id="name" name="name" />
+                                                <input class="form-control" placeholder="Enter Rejection Reason Name" autocomplete="off" ng-model="$ctrl.entity.name" id="name" name="name" />
                                                 <input type="hidden" class="form-control" autocomplete="off" ng-model="$ctrl.entity.id" name="id" value="{{$ctrl.entity.id}}" />
                                                 <input type="hidden" class="form-control" autocomplete="off" ng-model="$ctrl.entity.entity_type_id" name="entity_type_id" value="{{$ctrl.entity_type_id}}" />
                                             </div><!-- Feild -->
